# Mainstay

./: TODO.md
contracts/lifecycle/: Cargo.toml
contracts/lifecycle/src/: lib.rs
contracts/lifecycle/test_snapshots/tests/: test_admin_can_reset_score.1.json  test_admin_can_update_decay_config.1.json  test_admin_can_update_max_history.1.json  test_admin_can_update_score_increment.1.json  test_admin_can_upgrade.1.json  test_batch_submit_exceeds_history_cap.1.json  test_batch_submit_extends_ttl.1.json  test_batch_submit_fails_atomically_on_history_cap.1.json  test_batch_submit_maintenance.1.json  test_batch_submit_maintenance_extends_ttl.1.json  test_batch_submit_no_duplicate_engineer_history.1.json  test_batch_submit_score_history_length_matches_records.1.json  test_collateral_score_caps_at_100.1.json  test_decay_score_clamps_at_zero_after_long_elapsed_time.1.json  test_decay_score_emits_correct_event.1.json  test_decay_score_extends_ttl.1.json  test_decay_score_five_points_per_thirty_day_interval.1.json  test_decay_score_uses_configured_values.1.json  test_engineer_maintenance_history_multiple_assets_and_sessions.1.json  test_full_cross_contract_integration_with_transfer.1.json  test_full_lifecycle_integration.1.json  test_get_collateral_score_applies_lazy_decay.1.json  test_get_engineer_maintenance_history_page.1.json  test_get_last_service_no_history.1.json  test_get_last_service_returns_most_recent_by_timestamp.1.json  test_get_maintenance_history_page.1.json  test_history_cap_enforced.1.json  test_is_collateral_eligible_after_threshold_lowered.1.json  (+31 more)
(+21 files in other folders)
