[package]
name = "lifecycle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
asset-registry = { path = "../asset-registry" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
engineer-registry = { path = "../engineer-registry" }
